front-end/src/components/PortfolioChart/PortfolioChart.styles.css
.portfolio-table {
    @apply border-collapse m-0 p-0 w-full table-fixed;

    tr {
        @apply text-app-text-secondary px-app-xs;
    }

    th,
    td {
        @apply border-b border-b-app-text-secondary p-app-sm text-center;
    }

    th {
        font-size: .85em;
        letter-spacing: .1em;
        text-transform: uppercase;
    }
}

@media screen and (max-width: 600px) {
    .portfolio-table {
        border: 0;

        thead {
            @apply border-none h-[1px] m-[-1px] overflow-hidden p-0 absolute w-[1px];
        }

        tr {
            @apply border border-app-text-secondary block mb-app-sm;
        }

        td {
            @apply border-b border-b-app-text-secondary;
            display: block;
            font-size: .8em;
            text-align: right;
        }

        td::before {
            /*
          * aria-label has no advantage, it won't be read inside a table
          content: attr(aria-label);
          */
            content: attr(data-label);
            float: left;
            font-weight: bold;
            text-transform: uppercase;
        }

        td:last-child {
            border-bottom: 0;
        }
    }
}

